--- a/app/src/main/res/layout/activity_choose_zone.xml
+++ b/app/src/main/res/layout/activity_choose_zone.xml
@@ -104,7 +104,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnnext"
         android:layout_width="111dp"
         android:layout_height="39dp"
         android:layout_marginEnd="16dp"
