--- a/app/src/main/res/layout/activity_choose_zone2.xml
+++ b/app/src/main/res/layout/activity_choose_zone2.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.chooseZone.ChooseZone2Activity">
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnNext"
         android:layout_width="111dp"
         android:layout_height="39dp"
         android:layout_marginEnd="16dp"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
@@ -181,9 +181,9 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button4"
+        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="@+id/btnNext"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/backgrey" />
 
