--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -116,10 +116,11 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
+                android:layout_height="170dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
+                    android:background="@drawable/fullbody1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -177,10 +178,11 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
+                android:layout_height="170dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
+                    android:background="@drawable/cardio"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
