--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="transparent">#00000000</color>
     <color name="translucent_white">#88ffffff</color>
     <color name="blue">#3374E4</color>
+    <color name="orange">#FA8344</color>
 </resources>
