setting fragment , fix font

--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -116,7 +116,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="140dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -127,7 +127,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
+                        android:layout_gravity="bottom"
+                        android:layout_marginBottom="8dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -137,7 +138,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
                             android:text="Full body"
-                            android:textColor="@color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="24sp"
                             android:textStyle="bold" />
 
@@ -146,12 +147,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
+                            android:textColor="@android:color/white"
                             android:text="Total time: 8 mins" />
 
                         <TextView
                             android:id="@+id/textView20"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textColor="@android:color/white"
                             android:layout_marginLeft="24dp"
                             android:text="Exercise: 10" />
                     </LinearLayout>
@@ -178,7 +181,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="140dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -189,7 +192,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
+                        android:layout_gravity="bottom"
+                        android:layout_marginBottom="8dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -199,7 +203,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
                             android:text="Cardio"
-                            android:textColor="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="24sp"
                             android:textStyle="bold" />
 
@@ -208,6 +212,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
+                            android:textColor="@android:color/white"
                             android:text="Total time: 8 mins" />
 
                         <TextView
@@ -215,6 +220,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
+                            android:textColor="@android:color/white"
                             android:text="Exercise: 10" />
                     </LinearLayout>
 
