--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,14 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="circleImageViewStyle" >
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/font_framily</item>
+        <item name="fontFamily">@font/font_framily</item>
+        <item name="android:buttonStyle">@style/Theme.AppCompat.DayNight</item>
+    </style>
 </resources>
