--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,7 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/font_framily</item>
+        <item name="fontFamily">@font/font_framily</item>
         <item name="android:buttonStyle">@style/Theme.AppCompat.DayNight</item>
     </style>
 </resources>
